--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 <title>WSJS Platformer Demonstration</title>
 
 <script type="module">
-    import CoreClass from '../../code/main/core.js';
+    import CoreClass from '../../../code/main/core.js';
     
     window.core=new CoreClass();
 </script>
