03_25_2021 (Start of Scripting Change)

--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,9 @@
 
 <script type="module">
     import CoreClass from '../../../code/main/core.js';
+    import DemoPlatformerClass from './demo_platformer.js';
     
-    window.core=new CoreClass();
+    window.core=new CoreClass(new DemoPlatformerClass());
 </script>
 
 </head>
