--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     import CoreClass from '../../../code/main/core.js';
     import DemoPlatformerClass from './demo_platformer.js';
     
-    window.core=new CoreClass(new DemoPlatformerClass());
+    window.core=new CoreClass(DemoPlatformerClass);
 </script>
 
 </head>
