--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,11 @@
 </head>
 
 <body style="user-select:none;-webkit-user-select:none">
-    <div style="font-family:Arial;font-size:18pt;font-style:underline;cursor:pointer" onmouseover="this.style.color='#FF0000'" onmouseout="this.style.color='#000000'" onclick="window.core.run({})">
-        Click to Run
+    <div style="position:absolute;left:5px;top:5px;width:330px;height:35px;padding-left:12px;padding-top:7px;font-family:Arial;font-size:18pt;cursor:pointer;background-color:#CCAAFF;border:1px solid #0000AA" onmouseover="this.style.backgroundColor='#FF55FF'" onmouseout="this.style.backgroundColor='#CCAAFF'" onclick="window.core.run({})">
+        Click to Run Platformer Demo
+    </div>
+    <div style="position:fixed;bottom:5px;left:5px;font-family:Arial;font-size:14pt">
+        open-source 3D javascript game engine <b>WSJS</b> - github: <a href="https://github.com/ggadwa" target="_blank">code</a> - twitter: <a href="https://twitter.com/ggadwa" target="_blank">@ggadwa</a>
     </div>
 </body>
 
